--- a/003_PROJETO/app/src/estilos/Resultados.css
+++ b/003_PROJETO/app/src/estilos/Resultados.css
@@ -1,20 +1,14 @@
-/* .container-fluid {
-    padding: 10px;
-    background: linear-gradient(317deg, #666666, #262626, #0D0D0D);
-} */
-
-.divResultados {
+.divQuadro {
     color: rgb(255, 255, 255);
-    border: inset 2px white;    
+    border: inset 2px white;
 }
 
-.divRiscoInferior {
-    border-bottom: solid 1px white;
-    margin-bottom: 20px;
-}
-
-.divRiscoSuperior {
+.divLinhaAcima {
     border-top: solid 1px white;
+}
+
+.divLinhaAbaixo {
+    border-bottom: solid 1px white;
 }
 
 .resultados {
