--- a/003_PROJETO/app/src/estilos/Memorial.css
+++ b/003_PROJETO/app/src/estilos/Memorial.css
@@ -1,3 +1,12 @@
+
+/* 
+
+Código elaborado por: Nelson Braga
+Cargo: Desenvolvedor Fullstack
+Data: 22/03/2024 
+
+*/
+
 #tituloLocal, #descConsumidor {
     width: 100%;
     font-weight: 700;
