--- a/003_PROJETO/app/src/estilos/Abertuta.css
+++ b/003_PROJETO/app/src/estilos/Abertuta.css
@@ -1,3 +1,12 @@
+
+/* 
+
+Código elaborado por: Nelson Braga
+Cargo: Desenvolvedor Fullstack
+Data: 22/03/2024 
+
+*/
+
 @keyframes float {
     0% {
         transform: translate3d(0px, 0px, 0px);
