--- a/003_PROJETO/app/src/estilos/Resultados.css
+++ b/003_PROJETO/app/src/estilos/Resultados.css
@@ -1,3 +1,12 @@
+
+/* 
+
+Código elaborado por: Nelson Braga
+Cargo: Desenvolvedor Fullstack
+Data: 22/03/2024 
+
+*/
+
 .divQuadro {
     color: rgb(255, 255, 255);
     border: inset 2px white;
